css/frm_admin.css
/* ... */
.accordion-container .field-group.frm-first-row{
	margin-top:0;
}
.accordion-container .field-group.frm-half{
	width: 49%;
}
.accordion-container .field-group.frm-full{
	width: 100%;
	margin-right:0;
	float:none;
	clear:both;
}

.field-group-background{
	margin: 4px 0 0;
	clear: both;
	float: none;
	width: auto;
}
.field-group-border{
	clear: left;
}

.metabox-holder .accordion-container .inside h3{
	padding:20px 0 0;
	margin:0;
}
.accordion-container label{
	font-size:12px;
}

.accordion-container ul.add-menu-item-tabs li{
	padding:3px 3px 3px 6px;
}

.accordion-container .posttypediv div.tabs-panel{
	max-height:500px;
	overflow:visible;
	padding-bottom:0.9em;
}

/*form labels*/
.accordion-container .field-group label {
	margin: 6px 0 5px;
	display: block;
}
.global-font .field-group{
	margin: 4px 0 0;
	clear: both;
	float: none;
	width: auto;
}
.global-font .field-group label{
	float: left;
	margin-right: 4px !important;
	text-align: right;
	width: 50px;
}

/*form inputs/selects */
.accordion-container input.hex,
.field-group input[type="text"],
.field-group select{
	width: 97%;
	outline: 0;
}
.global-font .field-group input[type="text"]{width:auto;}

/*pickers*/
#picker {
	position: absolute;
	left: 0;
	top: auto;
	width: 200px;
}

/*Farbtastic styles*/
.farbtastic {
  position: relative;
  background: #555;
  border: 1px solid #aaa;
  top: 1px;
  left: 0;
  z-index: 99999999;
}
.farbtastic * {
  position: absolute;
  cursor: crosshair;
}
.farbtastic, .farbtastic .wheel {
  width: 195px;
  height: 195px;
}
.farbtastic .color, .farbtastic .overlay {
  top: 47px;
  left: 47px;
  width: 101px;
  height: 101px;
}
.farbtastic .wheel {
  background: url(../images/styler/wheel.png) no-repeat;
  width: 195px;
  height: 195px;
}
.farbtastic .overlay {
  background: url(../images/styler/mask.png) no-repeat;
}
.farbtastic .marker {
  width: 17px;
  height: 17px;
  margin: -8px 0 0 -8px;
  overflow: hidden;
  background: url(../images/styler/marker.png) no-repeat;
}

/* ---------------------------------------------------------------
Clearfix
--------------------------------------------------------------- */
span.clear{display:block;}
.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.clearfix {display: inline-block;}

/*Override styling from other plugins*/
.frm_form_fields .clear{height:auto;}

/* Hides from IE-mac \*/
* html .clearfix {height: 1%;}
.clearfix {display: block;}
/* End hide from IE-mac */

/*-----------------------------------------------------------------
Responsive Design
---------------------------------------------------------------- */

@media only screen and (max-width: 1200px) {
	.frm_drag_inst{font-size: 30px;}

  	li.ui-state-default.selected .frm-show-click.frm_import_options {
  		background: none;
		border:none;
	}
	.frm_inline_label {
	  display: block;
	  margin: 5px 0;
  	}
}
@media only screen and (max-width: 1050px) {
	.frm_drag_inst{font-size: 20px;}
	#frm_adv_info{
        top:auto !important;
        position:static;
        width:auto;
    }
    #form_settings_page #post-body #postbox-container-1{
        margin-right:0;
        width:100%;
    }
    #form_settings_page #post-body.columns-2{
        margin:0;
    }
	ul.frm_form_nav { min-width:100px; width:100%; }
	ul.frm_form_nav li.last .caret { display:none; }
}
@media only screen and (max-width: 850px) {
	#postbox-container-1 .frm_field_list{position:static; width:100%;}
	.frm_col_one{clear:none;}
	.field_type_list li{margin-right:4px;}
	.frm_drag_inst{font-size: 40px;text-align:center;}
}

@media only screen and (max-width: 782px){
    #form_settings_page .advanced_settings .form-table td, .form-table th{
        display:table-cell;
        width:auto !important;
    }

	.wp-list-table.toplevel_page_formidable .column-entries,
	.wp-list-table.toplevel_page_formidable .column-form_key,
	.wp-list-table.toplevel_page_formidable .column-shortcode,
	.wp-list-table.toplevel_page_formidable .column-created_at{
	    display:none !important;
	}

	.wp-list-table.toplevel_page_formidable td.column-entries,
	.wp-list-table.toplevel_page_formidable td.column-form_key,
	.wp-list-table.toplevel_page_formidable td.column-shortcode,
	.wp-list-table.toplevel_page_formidable td.column-created_at{
	    padding: 3px 8px 3px 35%;
		text-align:left;
	}

	.wp-list-table.toplevel_page_formidable td.column-title:before,
	.wp-list-table.toplevel_page_formidable td.column-id:before{
		display:none !important;
	}

	.wp-list-table.toplevel_page_formidable td.column-title,
	.wp-list-table.toplevel_page_formidable td.column-id{
		display:table-cell !important;
	}

	#form_entries_page .wp-list-table th.frm_hidden,
	#form_entries_page .wp-list-table td.frm_hidden{
		display:none !important;
	}

}
@media (min-width:768px){
    .navbar-right .frm-dropdown-menu{right:0;left:auto;}
}
@media only screen and (max-width: 600px) {
	ul.frm_form_nav {min-width:100px; width:100%;}
	ul.frm_form_nav a { font-size: 12px; padding: 5px 10px;	}
}
@media only screen and (max-width: 475px) {
	.frm_drag_inst{
		font-size: 16px;
		margin-bottom:40px;
	}
}
@media only screen and (max-width: 450px) {
	ul.frm_form_nav { min-width:100px; width:100%; }
	ul.frm_form_nav li { width:14%; }
	ul.frm_form_nav li.last { width: 28%; }
	ul.frm_form_nav a {	padding:5px 0; }
}
/* ... */

